# EmptySolution

./: README.md
ProjectName/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  JsonParser.cpp  JsonParser.h  LensCopy.cpp  Serializable.cpp  Serializable.h  SolutionNameConfig.h.in  main.cpp
ProjectName/DllName/: CMakeLists.txt  DllSample.cpp  DllSample.h  Dllmain.cpp
ProjectName/Installer/: Registery.nsh  SolutionName.nsi
ProjectName/LibName/: CMakeLists.txt
ProjectName/LoadTimeDllName/: CMakeLists.txt  LoadTimeDllInterface.cpp  LoadTimeDllInterface.h
ProjectName/RunTimeDllName/: CMakeLists.txt
TEMP BUILD IVY/: build.xml  ivy.xml  stage.txt
